--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
         chmod +x minikube
         sudo mv minikube /usr/local/bin/
-        sudo minikube start --driver=docker
+        sudo minikube start --driver=docker --force
 
     - name: Use Minikube's Docker daemon
       run: eval $(minikube docker-env)
