add driver docker

--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -19,16 +19,17 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y curl apt-transport-https virtualbox virtualbox-ext-pack
+          sudo apt-get install -y curl apt-transport-https
           curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
           sudo install minikube /usr/local/bin/
           curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
           chmod +x kubectl
           sudo mv kubectl /usr/local/bin/
+          sudo apt-get install -y docker.io
 
-      - name: Start Minikube
+      - name: Start Minikube with Docker driver
         run: |
-          sudo minikube start --driver=virtualbox
+          sudo minikube start --driver=docker
 
       - name: Set up kubectl context
         run: |
