sudo for Minikube Commands

--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -52,32 +52,32 @@ jobs:
         run: |
           sudo minikube start --driver=docker --force
 
-      - name: Ensure Minikube is Running
-        run: |
-          minikube status
-          # Wait for Kubernetes API to be available
-          for i in {1..10}; do
-            kubectl get nodes && break
-            echo "Waiting for Kubernetes API..." && sleep 10
-          done
-
-      - name: Set up kubectl context
+      - name: Use Minikube context
         run: |
           sudo minikube kubectl -- config use-context minikube
 
+      - name: Verify Minikube status
+        run: |
+          sudo minikube status
+          # Wait for Kubernetes API to be available
+          for i in {1..10}; do
+            sudo minikube kubectl -- get nodes && break
+            echo "Waiting for Kubernetes API..." && sleep 10
+          done
+
       - name: Apply Kubernetes manifests
         run: |
-          kubectl apply -f kubernetes/option-2-kubectl/ --validate=false
+          sudo minikube kubectl -- apply -f kubernetes/option-2-kubectl/ --validate=false
 
       - name: Verify ELK stack deployment
         run: |
-          kubectl rollout status statefulset/elasticsearch
-          kubectl rollout status deployment/kibana
-          kubectl rollout status deployment/logstash
+          sudo minikube kubectl -- rollout status statefulset/elasticsearch
+          sudo minikube kubectl -- rollout status deployment/kibana
+          sudo minikube kubectl -- rollout status deployment/logstash
 
       - name: Forward Kibana port
         run: |
-          kubectl port-forward service/kibana 5601:5601 &
+          sudo minikube kubectl -- port-forward service/kibana 5601:5601 &
           sleep 10
 
       - name: Test Kibana UI is accessible
@@ -86,5 +86,5 @@ jobs:
 
       - name: Clean up
         run: |
-          kubectl delete -f kubernetes/option-2-kubectl/
+          sudo minikube kubectl -- delete -f kubernetes/option-2-kubectl/
           sudo minikube delete
