--- a/.github/workflows/test-deployment.yml
+++ b/.github/workflows/test-deployment.yml
@@ -40,7 +40,8 @@ jobs:
       - name: Install Minikube
         run: |
           curl -Lo minikube https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-          sudo install minikube /usr/local/bin/
+          chmod +x minikube
+          sudo mv minikube /usr/local/bin/
 
       - name: Install kubectl
         run: |
@@ -48,9 +49,9 @@ jobs:
           chmod +x kubectl
           sudo mv kubectl /usr/local/bin/
 
-      - name: Start Minikube with Docker driver without sudo
+      - name: Start Minikube with Docker driver
         run: |
-          minikube start --driver=docker --cache-dir=/home/runner/.minikube/cache
+          minikube start --driver=docker
 
       - name: Use Minikube context
         run: |
