--- a/.github/workflows/test-helm-deployment.yml
+++ b/.github/workflows/test-helm-deployment.yml
@@ -1,4 +1,4 @@
-name: Test ELK Stack Deployment with Kubectl
+name: Test ELK Stack Deployment with Helm
 
 on:
   push:
@@ -49,6 +49,10 @@ jobs:
           chmod +x kubectl
           sudo mv kubectl /usr/local/bin/
 
+      - name: Install Helm
+        run: |
+          curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+
       - name: Start Minikube with Docker driver
         run: |
           minikube start --driver=docker
@@ -65,19 +69,26 @@ jobs:
             echo "Waiting for Kubernetes API..." && sleep 10
           done
 
-      - name: Apply Kubernetes manifests
+      - name: Add Helm repository and update
         run: |
-          minikube kubectl -- apply -f kubernetes/option-2-kubectl/ --validate=false
+          helm repo add elastic https://helm.elastic.co
+          helm repo update
+
+      - name: Install ELK stack using Helm
+        run: |
+          helm install elk elastic/elasticsearch
+          helm install kibana elastic/kibana
+          helm install logstash elastic/logstash
 
       - name: Verify ELK stack deployment
         run: |
-          minikube kubectl -- rollout status statefulset/elasticsearch
+          minikube kubectl -- rollout status statefulset/elasticsearch-master
           minikube kubectl -- rollout status deployment/kibana
           minikube kubectl -- rollout status deployment/logstash
 
       - name: Forward Kibana port
         run: |
-          minikube kubectl -- port-forward service/kibana 5601:5601 &
+          minikube kubectl -- port-forward service/kibana-kibana 5601:5601 &
           sleep 10
 
       - name: Test Kibana UI is accessible
@@ -86,5 +97,7 @@ jobs:
 
       - name: Clean up
         run: |
-          minikube kubectl -- delete -f kubernetes/option-2-kubectl/
+          helm uninstall elk
+          helm uninstall kibana
+          helm uninstall logstash
           minikube delete
