--- a/kubernetes/option-2-kubectl/elasticsearch.yaml
+++ b/kubernetes/option-2-kubectl/elasticsearch.yaml
@@ -27,6 +27,13 @@ spec:
         volumeMounts:
         - name: elasticsearch-data
           mountPath: /usr/share/elasticsearch/data
+        readinessProbe:  # Add this section
+          httpGet:
+            path: /
+            port: 9200
+          initialDelaySeconds: 30  # Adjust the delay as needed
+          periodSeconds: 10
+          timeoutSeconds: 5
   volumeClaimTemplates:
   - metadata:
       name: elasticsearch-data
