--- a/kubernetes/option-2-kubectl/logstash.yaml
+++ b/kubernetes/option-2-kubectl/logstash.yaml
@@ -26,6 +26,17 @@ spec:
                 secretKeyRef:
                   name: elastic-credentials
                   key: logstash_password
+          readinessProbe:  # Add this section
+            httpGet:
+              path: /
+              port: 9600
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+          lifecycle:  # Add a startup delay for Logstash
+            postStart:
+              exec:
+                command: ["/bin/sh", "-c", "sleep 60"]
           volumeMounts:
             - name: config-volume
               mountPath: /usr/share/logstash/config
