--- a/kubernetes/option-2-kubectl/logstash.yaml
+++ b/kubernetes/option-2-kubectl/logstash.yaml
@@ -26,17 +26,17 @@ spec:
                 secretKeyRef:
                   name: elastic-credentials
                   key: logstash_password
-          readinessProbe:  # Add this section
+          readinessProbe:  # Adjusted this section
             httpGet:
               path: /
               port: 9600
-            initialDelaySeconds: 30
+            initialDelaySeconds: 60  # Increased delay
             periodSeconds: 10
             timeoutSeconds: 5
-          lifecycle:  # Add a startup delay for Logstash
+          lifecycle:  # Startup delay to ensure Elasticsearch is ready
             postStart:
               exec:
-                command: ["/bin/sh", "-c", "sleep 60"]
+                command: ["/bin/sh", "-c", "sleep 120"]  # Logstash waits 120s before starting
           volumeMounts:
             - name: config-volume
               mountPath: /usr/share/logstash/config
